using UnityEngine;

namespace VirtualFishing.Core.Events
{
    [CreateAssetMenu(menuName = "VirtualFishing/Events/Float Event")]
    public class FloatEventSO : GameEventSO<float> { }
}
