using UnityEngine;

namespace VirtualFishing.Core.Events
{
    [CreateAssetMenu(menuName = "VirtualFishing/Events/Int Event")]
    public class IntEventSO : GameEventSO<int> { }
}
