using UnityEngine;

namespace VirtualFishing.Core.Events
{
    [CreateAssetMenu(menuName = "VirtualFishing/Events/String Event")]
    public class StringEventSO : GameEventSO<string> { }
}
