@startuml
!pragma layout smetana
!theme plain
title VR 낚시 게임 - 코어 인프라 (SO Event System + Shared Data)
skinparam defaultFontName "Malgun Gothic"
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

package "Enums" #F5F5F5 {
  enum GameState {
    Login
    Calibration
    FishingReady
    Fishing
    MiniGame
    Result
    Warning
    Paused
    ExitSequence
  }

  enum RodState {
    Idle
    Attached
    Casting
    WaitingForBite
    Hit
    MiniGame
  }

  enum TensionZone {
    Safe
    Warning
    Danger
    Critical
  }

  enum SafetyWarningLevel {
    None
    NearBoundary
    Outside
    Emergency
  }

  enum BackgroundType {
    River
    Lake
    Sea
    Pond
  }

  enum MovementPattern {
    Calm
    Aggressive
    Erratic
  }

  enum FishMoveMode {
    Stop
    MoveLeft
    MoveRight
  }

  enum FishMoveState {
    Normal
    Left
    Right
    Opposite
  }

  enum FishPhase {
    None
    Phase1
    Phase2
    Phase3
    Phase4
  }

  enum ControllerHand {
    Left
    Right
    Both
  }

  enum HapticPattern {
    LightPulse
    StrongPulse
    Continuous
    RhythmicWarning
  }

  enum HapticSource {
    Default
    TensionWarning
    SafetyWarning
  }
}

package "SO Event System\n<<Observer Pattern>>" #E8F5E9 {
  interface "IGameEventListener<T>" as IListener {
    + OnEventRaised(value : T) : void
  }

  interface IVoidEventListener {
    + OnEventRaised() : void
  }

  abstract class "GameEventSO<T>" as GameEventSO <<ScriptableObject>> {
    - _listeners : List<IGameEventListener<T>>
    + Raise(value : T) : void
    + Register(listener) : void
    + Unregister(listener) : void
  }

  class VoidEventSO <<ScriptableObject>> {
    - _listeners : List<IVoidEventListener>
    + Raise() : void
    + Register(listener) : void
    + Unregister(listener) : void
  }

  class FloatEventSO <<ScriptableObject>>
  class IntEventSO <<ScriptableObject>>
  class StringEventSO <<ScriptableObject>>
  class RodStateTransitionEventSO <<ScriptableObject>>

  class VoidEventListener <<MonoBehaviour>> {
    - gameEvent : VoidEventSO
    - response : UnityEvent
  }
  class FloatEventListener <<MonoBehaviour>>
  class IntEventListener <<MonoBehaviour>>
  class StringEventListener <<MonoBehaviour>>
  class RodStateTransitionEventListener <<MonoBehaviour>>

  FloatEventSO --|> GameEventSO
  IntEventSO --|> GameEventSO
  StringEventSO --|> GameEventSO
  RodStateTransitionEventSO --|> GameEventSO

  VoidEventListener ..|> IVoidEventListener
  FloatEventListener ..|> IListener
  IntEventListener ..|> IListener
  StringEventListener ..|> IListener
  RodStateTransitionEventListener ..|> IListener

  VoidEventSO --> IVoidEventListener : notifies *
  GameEventSO --> IListener : notifies *
}

package "Shared Data\n<<SO Pattern>>" #E3F2FD {
  class PlayerDataSO <<ScriptableObject>> {
    + sittingHeight : float
    + armLength : float
    + currentPosition : Vector3
    + safetyRadius : float
  }

  class AccountDataSO <<ScriptableObject>> {
    + accountId : string
    + lastPlayedAt : string
    + encyclopedia : List<FishCatchRecord>
    + totalScore : int
  }

  class FishSpeciesDataSO <<ScriptableObject>> {
    + FishId : string
    + DisplayName : string
    + Rarity : int (1~5)
    + SizeRangeCm : FloatRange
    + WeightRangeKg : FloatRange
    + BaseResistance : float
    + MovementPattern : MovementPattern
    + MinWaitTime / MaxWaitTime : float
    + BaseScore : int
    + FishPrefab : GameObject
    + Icon : Sprite
    + GetRandomWeightKg() : float
    + GetRandomSizeCm() : float
  }

  class FishDatabaseSO <<ScriptableObject>> {
    + AllSpecies : IReadOnlyList<FishSpeciesDataSO>
    + GetRandomByRarity() : FishSpeciesDataSO
  }

  class FishingSiteDataSO <<ScriptableObject>> {
    + SiteId : string
    + DisplayName : string
    + SceneName : string
    + BackgroundType : BackgroundType
    + AmbientSound : AudioClip
    + SkyboxMaterial : Material
    + EnvironmentPrefab : GameObject
    + spawnFishList : List<FishSpawnEntry>
  }

  class TensionDataSO <<ScriptableObject>> {
    + currentTension : float
    + maxTension : float
    + initialTension : float
    + tooLowThreshold : float
    + dangerThreshold : float
    + GetCurrentZone() : TensionZone
    + ResetTension() : void
  }

  class GameSettingsSO <<ScriptableObject>> {
    + calibrationTimeout : float
    + castingPowerMultiplier : float
    + castingZoneRadius : float
    + castingZoneOffset : Vector3
    + minCastingHoldTime : float
    + minCastingAcceleration : float
    + hookTimingWindow : float
    + hookingZoneRadius : float
    + hookingMinAcceleration : float
    + dominantHand : ControllerHand
    + safetyCheckInterval : float
    + nearBoundaryDistance : float
    + emergencyTimeout : float
    + autoConfirmDelay : float
    + autoSaveInterval : float
  }

  class MiniGameSettingsSO <<ScriptableObject>> {
    + baseDifficulty : float
    + baseTimeLimit : float
    + resistanceFactor : float
    + tensionIncreaseRate : float
    + tensionDecreaseRate : float
    + tensionMultiplierSide : float
    + tensionMultiplierOpposite : float
    + gaugeIncreaseRate : float
    + gaugeDecreaseRate : float
    + successGaugeMax : float
    + biteMinTime / biteMaxTime : float
    + phaseHoldDuration : float
  }

  FishDatabaseSO *-- "*" FishSpeciesDataSO
  FishingSiteDataSO o-- "*" FishSpawnEntry
  FishSpeciesDataSO --> MovementPattern
  FishingSiteDataSO --> BackgroundType
  TensionDataSO --> TensionZone
  AccountDataSO o-- "*" FishCatchRecord
}

package "Data Structures" #FFF3E0 {
  class FishCatchData <<struct>> {
    + species : FishSpeciesDataSO
    + weight : float
    + caughtAt : string
    + siteType : BackgroundType
  }

  class FishCatchRecord <<Serializable>> {
    + speciesName : string
    + weight : float
    + caughtAt : string
    + siteName : string
    + score : int
  }

  class FishSpawnEntry <<Serializable>> {
    + SpeciesData : FishSpeciesDataSO
    + SpawnWeight : float
    + IsValid : bool
  }

  class FloatRange <<struct>> {
    + min : float
    + max : float
    + GetRandom() : float
  }

  FishSpawnEntry --> FishSpeciesDataSO
  FishCatchData --> FishSpeciesDataSO
  FishCatchData --> BackgroundType
}

note as N1
  <b>SO Event System (Observer Pattern)</b>
  프리팹 간 직접 참조 없이 이벤트 통신
  인스펙터에서 드래그&드롭으로 연결
  씬 독립적 (씬 전환 시에도 유지)
  RodStateTransitionEventSO: (이전,현재) 상태쌍 전달

  <b>Shared Data SO (SO Pattern)</b>
  런타임 공유 데이터 컨테이너
  여러 시스템이 동일 SO를 참조
  모든 설정값은 SO에 저장(하드코딩 금지)
end note

@enduml
